[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.52.0"
aws-types = "0.52.0"
aws-sdk-eventbridge = "0.22.0"
lambda_runtime = "0.7.2"
serde = "1.0.136"
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
geohash = "0.13.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
